# treesync

./: Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
tests/: __init__.py  conftest.py  test_configuration.py  test_host.py  test_target.py  utils.py
tests/cli/: test_cli.py  test_list.py  test_pull.py  test_push.py  test_show.py
tests/configuration/: __init__.py  test_configuration.py  test_sources.py  validators.py
tests/data/: servers.yml
tests/mock/: host_sources.yml  invalid_host_targets.yml  old_format_servers.yml
treesync/: __init__.py  configuration.py  constants.py  host.py  target.py  tree.py
treesync/configuration/: defaults.py  hosts.py  loader.py  servers.py  sources.py  targets.py
