[metadata]
description-file = README.md

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
filterwarnings =
    ignore:Using or importing the ABCs.*:DeprecationWarning

[flake8]
max-line-length = 120
exclude =
    .eggs/*
    venv/*
    .git,
    .eggs,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist
